Fix vertical align of switch in the form (#9661) (#9662)

--- a/styles/widgets/material/form.material.less
+++ b/styles/widgets/material/form.material.less
@@ -51,6 +51,10 @@
 }
 
 .dx-field-item-content {
+    .dx-switch {
+        vertical-align: middle;
+    }
+
     .dx-label-v-align & {
         .dx-textarea {
             margin-top: 6px;
